--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+boto==2.49.0
 certifi==2020.4.5.1
 chardet==3.0.4
 click==7.1.1
@@ -12,3 +13,4 @@ six==1.14.0
 SQLAlchemy==1.3.16
 urllib3==1.25.8
 Werkzeug==1.0.1
+
