--- a/requirements.txt
+++ b/requirements.txt
@@ -7,10 +7,12 @@ idna==2.9
 itsdangerous==1.1.0
 Jinja2==2.11.1
 MarkupSafe==1.1.1
+psycopg2-binary==2.8.5
 pyTelegramBotAPI==3.6.7
 requests==2.23.0
 six==1.14.0
 SQLAlchemy==1.3.16
 urllib3==1.25.8
 Werkzeug==1.0.1
+
 
